# NuovoProgettoSistemiOperativi

./: Bmp280.cpp  Bmp280.h  CMakeLists.txt  Joystick.cpp  Joystick.h  LoRaE220Transmitter.cpp  LoRaE220Transmitter.h  Qmc5883l.cpp  Qmc5883l.h  README.md  SDLogger.cpp  SDLogger.h  ServoMotor.cpp  ServoMotor.h  hw_config.c  main.cpp
Pico Ricevente/: CMakeLists.txt  LoRaReceiver.cpp  LoRaReceiver.h  ServoMotor.h  main.cpp
